Fixing CSS bug; aligning article.css and zdl.css

--- a/oxygen/framework/css/article.css
+++ b/oxygen/framework/css/article.css
@@ -314,6 +314,9 @@ Paraphrase:after { content: "’"; text-decoration: none; }
 *:not(Schreibung)[Zeitstempel]:before { -oxy-append-content:" ["attr(Zeitstempel)"] "; }
 *:not(Schreibung)[Quelle]:before { -oxy-append-content:" ["attr(Quelle)"] "; }
 *:not(Schreibung)[Autor]:before { -oxy-append-content:" ["attr(Autor)"] "; }
+
+Lesart[Glossar] { -oxy-append-content: " [Glossar: "attr(Glossar)"] "; }
+
 /* //Schreibung ist ein Spezialfall, wo's dahinter steht */
 Schreibung:before {
 	content: attr(hidx); /* Homographenziffern */
