--- a/oxygen/framework/css/zdl.css
+++ b/oxygen/framework/css/zdl.css
@@ -321,7 +321,7 @@ Artikel[Status]:before { -oxy-append-content:" ["attr(Status)"] "; }
 *:not(Schreibung)[Quelle]:before { -oxy-append-content:" ["attr(Quelle)"] "; }
 *:not(Schreibung)[Autor]:before { -oxy-append-content:" ["attr(Autor)"] "; }
 
-Lesart[@Glossar] { -oxy-append-content: "[Glossar: "attr(Glossar)"] "; }
+Lesart[Glossar] { -oxy-append-content: " [Glossar: "attr(Glossar)"] "; }
 
 /* //Schreibung ist ein Spezialfall, wo's dahinter steht */
 Schreibung:before {
